fix: notification z-index

--- a/client/src/components/NotificationContainer.css
+++ b/client/src/components/NotificationContainer.css
@@ -3,6 +3,7 @@
     transform: translate(-50%, 50%);
     left: 50%;
     bottom: -20px;
+    z-index: 999;
 }
 
 #notification-wrapper > .notification {
